--- a/ui/screens/Dashboard.html
+++ b/ui/screens/Dashboard.html
@@ -86,7 +86,7 @@
               <div class="px-4 py-5 sm:p-6">
                 <h3 class="text-lg font-medium text-gray-900">Become a Poll Worker</h3>
                 <p class="mt-1 text-sm text-gray-600">Poll workers are hired at the local level.</p>
-                <a href="/become_a_poll_worker" class="mt-3 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700">
+                <a href="/become_poll_worker" class="mt-3 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700">
                   Join Now!
                 </a>
               </div>
