--- a/ui/screens/ForgotPassword.html
+++ b/ui/screens/ForgotPassword.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login - Voter Registration</title>
+    <title>Forgot Password - Voter Registration</title>
     <link rel="icon" href="{{ url_for('ui', path='/assets/favicon.ico') }}" />
     <link
       rel="stylesheet"
@@ -14,10 +14,10 @@
     <div class="w-full max-w-sm">
       <form
         class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4"
-        id="loginForm"
+        id="forgotPasswordForm"
       >
         <h2 class="text-center text-2xl font-bold text-gray-900 mb-6">
-          Sign In to Your Account
+          Reset Your Password
         </h2>
         <div class="mb-4">
           <label
@@ -36,18 +36,18 @@
         <div class="mb-6">
           <label
             class="block text-gray-700 text-sm font-bold mb-2"
-            for="password"
+            for="newPassword"
           >
-            Password
+            New Password
           </label>
           <input
             class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline"
-            id="password"
+            id="newPassword"
             type="password"
             placeholder="******************"
           />
           <p class="text-red-500 text-xs italic hidden" id="password-error">
-            Please enter your password.
+            Please enter your new password.
           </p>
         </div>
         <div class="flex items-center justify-between">
@@ -55,23 +55,9 @@
             class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
             type="submit"
           >
-            Sign In
+            Reset Password
           </button>
-          <a
-            class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800"
-            href="/forgot_pass"
-          >
-            Forgot Password?
-          </a>
         </div>
-        <p class="mt-4 text-center text-gray-600 text-sm">
-          Don't have an account?
-          <a
-            class="text-blue-500 hover:text-blue-800 font-bold"
-            href="/signup"
-            >Sign Up</a
-          >
-        </p>
       </form>
       <p class="text-center text-gray-500 text-xs">
         &copy;2024 Voter Registration. All rights reserved.
@@ -83,7 +69,6 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/alpinejs/2.3.0/alpine-ie11.min.js"
       defer
     ></script>
-    <script src="{{ url_for('ui', path='/scripts/tailwind.config.js') }}"></script>
-    <script src="{{ url_for('ui', path='/scripts/loginHandler.js') }}"></script>
+    <script src="{{ url_for('ui', path='/scripts/forgotPasswordHandler.js') }}"></script>
   </body>
 </html>
