--- a/ui/screens/Landing.html
+++ b/ui/screens/Landing.html
@@ -24,7 +24,12 @@
           <button
             class="bg-green-300 text-black px-4 py-2 rounded-lg hover:bg-white transition duration-300 shadow-md"
           >
-            <a href="/dashboard">Dashboard</a>
+            <a href="/login">Login</a>
+          </button>
+          <button
+            class="bg-green-300 text-black px-4 py-2 rounded-lg hover:bg-white transition duration-300 shadow-md"
+          >
+            <a href="/signup">Sign Up</a>
           </button>
         </div>
       </div>
@@ -44,7 +49,7 @@
             <button
               class="bg-sky-400 hover:bg-white text-black font-bold py-2 px-4 border border-blue-700 rounded"
             >
-              <a href="/dashboard">Get Started</a>
+              <a href="/login">Get Started</a>
             </button>
           </div>
           <div class="md:w-1/2">
