--- a/ui/screens/SignUp.html
+++ b/ui/screens/SignUp.html
@@ -47,66 +47,20 @@
               />
             </div>
           </div>
-          <div class="flex flex-wrap -mx-3 mb-2">
-            <div class="w-full md:w-1/3 px-3 mb-6 md:mb-0">
+          <div class="flex flex-wrap -mx-3 mb-6">
+            <div class="w-full px-3">
               <label
                 class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"
-                for="state"
-                >State</label
+                for="confirm_password"
+                >Confirm Password</label
               >
-              <div class="relative">
-                <select
-                  class="block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 py-3 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-                  id="state"
-                  required
-                >
-                  <option value="">Select your state</option>
-                  <option value="Alabama">Alabama</option>
-                  <!-- Add more states here -->
-                </select>
-                <div
-                  class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700"
-                >
-                  <svg
-                    class="fill-current h-4 w-4"
-                    xmlns="http://www.w3.org/2000/svg"
-                    viewBox="0 0 20 20"
-                  >
-                    <path
-                      d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"
-                    />
-                  </svg>
-                </div>
-              </div>
-            </div>
-            <div class="w-full md:w-1/3 px-3 mb-6 md:mb-0">
-              <label
-                class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"
-                for="city"
-                >City</label
-              >
-              <div class="relative">
-                <select
-                  class="block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 py-3 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-                  id="city"
-                  required
-                >
-                  <option value="">Select your city</option>
-                </select>
-                <div
-                  class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700"
-                >
-                  <svg
-                    class="fill-current h-4 w-4"
-                    xmlns="http://www.w3.org/2000/svg"
-                    viewBox="0 0 20 20"
-                  >
-                    <path
-                      d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"
-                    />
-                  </svg>
-                </div>
-              </div>
+              <input
+                class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
+                id="confirm_password"
+                type="password"
+                placeholder="******************"
+                required
+              />
             </div>
           </div>
           <div class="flex items-center justify-between">
@@ -133,6 +87,5 @@
     ></script>
     <script src="{{ url_for('ui', path='/scripts/tailwind.config.js') }}"></script>
     <script src="{{ url_for('ui', path='/scripts/signupHandler.js') }}"></script>
-    <script src="{{ url_for('ui', path='/scripts/statesGetter.js') }}"></script>
   </body>
 </html>
