--- a/ui/screens/Landing.html
+++ b/ui/screens/Landing.html
@@ -19,7 +19,7 @@
       <div
         class="container mx-auto flex flex-col sm:flex-row justify-between items-center"
       >
-        <h1 class="text-2xl font-bold mb-2 sm:mb-0">Ballot Bridge</h1>
+        <h1 class="text-2xl font-bold mb-2 sm:mb-0">BallotBuddy</h1>
         <div>
           <button
             class="bg-green-300 text-black px-4 py-2 rounded-lg hover:bg-white transition duration-300 shadow-md"
